--- a/config/cartesian_space_dynamic_example/whole_body_controller.yaml
+++ b/config/cartesian_space_dynamic_example/whole_body_controller.yaml
@@ -1,28 +1,9 @@
-controller_manager:
-    ros__parameters:
-        # Update rate in Hz. This is the update rate of the controller manager. However, if you don' t configure the update rate for any of the 
-        # controllers, every controller will run at this rate
-        update_rate: 1000 
-        # Type configuration for the joint state broadcaster
-        joint_state_broadcaster:
-          type: joint_state_broadcaster/JointStateBroadcaster
-        # Type configuration for the whole body controller
-        whole_body_controller:
-          type: wbc_ros/WholeBodyController
-        # Type configuration for the Cartesian position controller
-        cartesian_position_controller:
-          type: wbc_ros/CartesianPositionController
-
 whole_body_controller:
     ros__parameters:
         # Update rate in Hz. 
         update_rate: 1000
         # Control mode of the wbc. Can be one of 0 - velocity, 1 - acceleration.
         control_mode: 1
-        # Command interfaces to claim from hardware. Can be one of [position,velocity,effort]
-        command_interfaces: ["position", "velocity"]
-        # State interfaces to claim from hardware. Can be one of [position,velocity,effort,acceleration]
-        state_interfaces: ["position", "velocity"]
         # Names of the tasks to be configured in task configuration. Each task will be a summand in the QP solver's cost function.
         task_names: ["ee_pose"]
         # Prefix used in the robot description parameter to claim the correct state and command interface names.
@@ -38,7 +19,7 @@ whole_body_controller:
         tasks:
             ee_pose:
                 # Task type, can be one of 0 - spatial_velocity, 1 - spatial_acceleration, 2 - com_velocity, 3 - com_acceleration, 4 - joint_velocity, 5 - joint_acceleration, 6 - contact_wrench
-                type: spatial_acceleration
+                type: 1
                 # Priority of this task. 0 corresponds to the highest priority. Prioritization is only supported by the hls solver.
                 priority: 0
                 # Only Cartesian tasks: Tip frame of the kinematic chain associated with this task. Has to be the name of a valid link in the robot model.
@@ -53,6 +34,14 @@ whole_body_controller:
                 # Initial activation for this task. Has to be within 0 and 1. Can be used to enable(1)/disable(0) the whole task,
                 # or to apply a smooth activation function.
                 activation: 1.0
+        controllers: 
+            ee_pose:
+                # P-Gain of the controller, size has to be 6.
+                p_gain: [10.0,10.0,10.0,10.0,10.0,10.0]
+                # D-Gain of the controller, size has to be 6. In case of velcity control mode, this is the feed forward gain
+                d_gain: [30.0,30.0,30.0,30.0,30.0,30.0]
+                # Controller output saturation per element. Size has to be 6.
+                max_control_output: [1000.0,1000.0,1000.0,1000.0,1000.0,1000.0]
         solver:
             # QP Solver type. Must be the exact name of one of the registered QP solver plugins. See src/solvers for all available plugins. Default is qpoases
             type: qpoases
@@ -61,18 +50,3 @@ whole_body_controller:
             type: acceleration_tsid
         # Do numerical integration on the solver output, e.g. if output is acceleration type, integrate twice to get velocity and position
         integrate: true
-
-cartesian_position_controller:
-    ros__parameters:
-        # Control output mode of the controller. Can be one of [0 - twist , 1 - acceleration].
-        control_mode: 1
-        # Name of the WBC task this controller is assigned to.
-        task_name: ee_pose
-        # Node name of the WBC controller.
-        wbc_name: whole_body_controller
-        # P-Gain of the controller, size has to be 6.
-        p_gain: [10.0,10.0,10.0,10.0,10.0,10.0]
-        # D-Gain of the controller, size has to be 6. In case of velcity control mode, this is the feed forward gain
-        d_gain: [30.0,30.0,30.0,30.0,30.0,30.0]
-        # Controller output saturation per element. Size has to be 6.
-        max_control_output: [1000.0,1000.0,1000.0,1000.0,1000.0,1000.0]
