--- a/config/joint_space_example/whole_body_controller.yaml
+++ b/config/joint_space_example/whole_body_controller.yaml
@@ -5,7 +5,7 @@ whole_body_controller:
         # Control mode of the wbc. Can be one of 0 - velocity, 1 - acceleration.
         control_mode: 0
         # Names of the tasks to be configured in task configuration. Each task will be a summand in the QP solver's cost function.
-        task_names: ["ee_pose"]
+        task_names: ["joint_position"]
         # Prefix used in the robot description parameter to claim the correct state and command interface names.
         prefix: ""
         # The joint weights control the contribution of each individual joint to the solution. Values have to be within [0,1].
@@ -17,31 +17,28 @@ whole_body_controller:
             # Robot model type. Must be the exact name of one of the registered robot model plugins. See src/robot_models for all available plugins. Default is pinocchio
             type: pinocchio
         tasks:
-            ee_pose:
+            joint_position:
                 # Task type, can be one of 0 - spatial_velocity, 1 - spatial_acceleration, 2 - com_velocity, 3 - com_acceleration, 4 - joint_velocity, 5 - joint_acceleration, 6 - contact_wrench
-                type: 0
+                type: 4
                 # Priority of this task. 0 corresponds to the highest priority. Prioritization is only supported by the hls solver.
                 priority: 0
-                # Only Cartesian tasks: Tip frame of the kinematic chain associated with this task. Has to be the name of a valid link in the robot model.
-                tip_frame: tool0
-                # Only Cartesian tasks: Reference frame of the task input (frame wrt which the input is expressed).
-                # This has to be the name of a valid link in robot model. If ref_frame != root the input will be transformed to the root frame.
-                ref_frame: world
+                # Only joint space tasks: Names of the joints involved in this task.
+                joint_names: ["joint_a1", "joint_a2", "joint_a3", "joint_a4", "joint_a5", "joint_a6", "joint_a7"]
                 # Initial weights for this task. Size has to be same as number of task variables, e.g. number of joint names in joint space tasks.
                 # and 6 in case of a Cartesian task. All entries have to be >= 0.  Can be used to balance contributions of the task variables.
                 # A value of 0 means that the reference of the corresponding task variable will be ignored while computing the solution.
-                weights: [1.0,1.0,1.0,1.0,1.0,1.0]
+                weights: [1.0,1.0,1.0,1.0,1.0,1.0,1.0]
                 # Initial activation for this task. Has to be within 0 and 1. Can be used to enable(1)/disable(0) the whole task,
                 # or to apply a smooth activation function.
                 activation: 1.0
         controllers: 
-            ee_pose:
-                # P-Gain of the controller, size has to be 6.
-                p_gain: [10.0,10.0,10.0,10.0,10.0,10.0]
-                # D-Gain of the controller, size has to be 6. In case of velcity control mode, this is the feed forward gain
+            joint_position:
+                # P-Gain of the controller, size has to be same as number of joints.
+                p_gain: [5.0,5.0,5.0,5.0,5.0,5.0,5.0]
+                # D-Gain of the controller, size has to be same as number of joints. 
                 d_gain: [0.0,0.0,0.0,0.0,0.0,0.0]
-                # Controller output saturation per element. Size has to be 6.
-                max_control_output: [10.0,10.0,10.0,10.0,10.0,10.0]
+                # Controller output saturation per element. Size has to be same as number of joints.
+                max_control_output: [10.0,10.0,10.0,10.0,10.0,10.0,10.0]
         solver:
             # QP Solver type. Must be the exact name of one of the registered QP solver plugins. See src/solvers for all available plugins. Default is qpoases
             type: qpoases
