--- a/config/biped_example/whole_body_controller.yaml
+++ b/config/biped_example/whole_body_controller.yaml
@@ -14,14 +14,7 @@ whole_body_controller:
             # Robot model type. Must be the exact name of one of the registered robot model plugins. See src/robot_models for all available plugins. Default is pinocchio
             type: pinocchio
             # Optionally attach a virtual 6 DoF floating base to the model
-            floating_base: true
-            contacts:
-                # Link names that can be in contact with the environment. These have to be valid link names in the robot model.
-                names: ["link_rl_foot", "link_ll_foot"]
-                # Array that states, for every contacting link, if the link is in contact with the environment initially
-                active: [1,1]
-                # Friction coeffcient for the contact point.
-                mu: 0.6
+            floating_base: false
         solver:
             # QP Solver type. Must be the exact name of one of the registered QP solver plugins. See src/solvers for all available plugins. Default is qpoases
             type: qpoases
@@ -37,7 +30,7 @@ whole_body_controller:
                 # Array of proportional gain values, size has to be 3
                 p_gain: [10.0,10.0,10.0]
                 # Array of derivative gain values, size has to be 3
-                d_gain: [3.0,3.0,3.0]
+                d_gain: [10.0,10.0,10.0]
                 # Controller output saturation per element. Size has to be 3
                 max_control_output: [100000.0,100000.0,100000.0]
             foot_r_pose: 
@@ -61,9 +54,9 @@ whole_body_controller:
                 # Initial activation for this task. Has to be within 0 and 1.
                 activation: 1.0
                 # Array of proportional gain values, size has to be 6
-                p_gain: [100.0,100.0,100.0,0.0,0.0,0.0]
+                p_gain: [10.0,10.0,10.0,0.0,0.0,0.0]
                 # Array of derivative gain values, size has to be 6
-                d_gain: [30.0,30.0,30.0,0.0,0.0,0.0]
+                d_gain: [3.0,3.0,3.0,0.0,0.0,0.0]
                 # Controller output saturation per element. Size has to be 6
                 max_control_output: [100000.0,100000.0,100000.0,100000.0,100000.0,100000.0]
                 # Tip frame of the kinematic chain associated with this task. Has to be the name of a valid link in the robot model.
