--- a/config/biped_example/whole_body_controller.yaml
+++ b/config/biped_example/whole_body_controller.yaml
@@ -15,20 +15,42 @@ whole_body_controller:
             type: pinocchio
             # Optionally attach a virtual 6 DoF floating base to the model
             floating_base: false
+            contacts:
+                left_leg:
+                    # Link name that can be in contact with the environment. Has to be valid link name in the robot model.
+                    name: "link_ll_foot"
+                    # Is the link is in contact with the environment initially?
+                    active: 0
+                    # Friction coeffcient for the contact point.
+                    mu: 0.6
+                right_leg:
+                    # Link name that can be in contact with the environment. Has to be valid link name in the robot model.
+                    name: "link_rl_foot"
+                    # Is the link is in contact with the environment initially?
+                    active: 0
+                    # Friction coeffcient for the contact point.
+                    mu: 0.6
         solver:
             # QP Solver type. Must be the exact name of one of the registered QP solver plugins. See src/solvers for all available plugins. Default is qpoases
             type: qpoases
         scene:
             # Scene type. Must be the exact name of one of the registered scene plugins. See src/scenes for all available plugins.
             type: acceleration_reduced_tsid
-        # P-Gains for the low-level PD controller during stance phase. These are sent along with the solver output to the motor drivers. Size has to be same as the number of joints"
-        p_gain_stance: [0.0,0.0,0.0,0.0,0.0,0.0]
-        # D-Gains for the low-level PD controller during stance phase. These are sent along with the solver output to the motor drivers. Size has to be same as the number of joints"
-        d_gain_stance: [0.0,0.0,0.0,0.0,0.0,0.0]
-        # P-Gains for the low-level PD controller during stance phase. These are sent along with the solver output to the motor drivers. Size has to be same as the number of joints"
-        p_gain_swing: [0.0,0.0,0.0,0.0,0.0,0.0]
-        # D-Gains for the low-level PD controller during stance phase. These are sent along with the solver output to the motor drivers. Size has to be same as the number of joints"
-        d_gain_swing: [0.0,0.0,0.0,0.0,0.0,0.0]
+        gain_scheduling:
+            # P-Gains for the low-level PD controller during stance phase. These are sent along with the solver output to the motor drivers. Size has to be same as the number of joints"
+            p_gain_stance: [0.0,0.0,0.0,0.0,0.0,0.0]
+            #p_gain_stance: [0.0,0.0,0.0,0.0,0.0,0.0]
+            # D-Gains for the low-level PD controller during stance phase. These are sent along with the solver output to the motor drivers. Size has to be same as the number of joints"
+            d_gain_stance: [0.0,0.0,0.0,0.0,0.0,0.0]
+            #d_gain_stance: [0.0,0.0,0.0,0.0,0.0,0.0]
+            # P-Gains for the low-level PD controller during stance phase. These are sent along with the solver output to the motor drivers. Size has to be same as the number of joints"
+            p_gain_swing: [0.0,0.0,0.0,0.0,0.0,0.0]
+            # D-Gains for the low-level PD controller during stance phase. These are sent along with the solver output to the motor drivers. Size has to be same as the number of joints"
+            d_gain_swing: [0.0,0.0,0.0,0.0,0.0,0.0]
+            # Joint names of the left leg in the correct order (same as in joint_names property). These are required to set the low-level PD-gains correctly.
+            joint_names_left_leg: ["joint_ll_hip_1","joint_ll_hip_2","joint_ll_knee"]
+            # Joint names of the right leg in the correct order (same as in joint_names property). These are required to set the low-level PD-gains correctly. 
+            joint_names_right_leg: ["joint_rl_hip_1","joint_rl_hip_2","joint_rl_knee"]
         integrator:
             # Integrate from current state (true) or from internal integrator state (false)
             from_current_state: true
@@ -48,13 +70,13 @@ whole_body_controller:
                 # Initial weights for this task. Size has to be 6
                 weights: [1.0,1.0,1.0,0.0,0.0,0.0]
                 # Initial activation for this task. Has to be within 0 and 1.
-                activation: 1.0
+                activation: 0.0
                 # Array of proportional gain values, size has to be 6
-                p_gain: [10.0,10.0,10.0,0.0,0.0,0.0]
+                p_gain: [500.0,500.0,500.0,0.0,0.0,0.0]
                 # Array of derivative gain values, size has to be 6
-                d_gain: [3.0,3.0,3.0,0.0,0.0,0.0]
+                d_gain: [100.0,100.0,100.0,0.0,0.0,0.0]
                 # Controller output saturation per element. Size has to be 6
-                max_control_output: [100000.0,100000.0,100000.0,100000.0,100000.0,100000.0]
+                max_control_output: [100000000.0,100000000.0,100000000.0,0,0,0]
                 # Tip frame of the kinematic chain associated with this task. Has to be the name of a valid link in the robot model.
                 tip_frame: link_rl_foot
                 # Reference frame of the task input (frame wrt which the input is expressed). This has to be the name of a valid link in robot model. If ref_frame != world the controller output will be transformed to the world frame.
@@ -63,13 +85,13 @@ whole_body_controller:
                 # Initial weights for this task. Size has to be 6
                 weights: [1.0,1.0,1.0,0.0,0.0,0.0]
                 # Initial activation for this task. Has to be within 0 and 1.
-                activation: 1.0
+                activation: 0.0
                 # Array of proportional gain values, size has to be 6
-                p_gain: [10.0,10.0,10.0,0.0,0.0,0.0]
+                p_gain: [500.0,500.0,500.0,0.0,0.0,0.0]
                 # Array of derivative gain values, size has to be 6
-                d_gain: [3.0,3.0,3.0,0.0,0.0,0.0]
+                d_gain: [100.0,100.0,100.0,0.0,0.0,0.0]
                 # Controller output saturation per element. Size has to be 6
-                max_control_output: [100000.0,100000.0,100000.0,100000.0,100000.0,100000.0]
+                max_control_output: [100000000.0,100000000.0,100000000.0,0,0,0]
                 # Tip frame of the kinematic chain associated with this task. Has to be the name of a valid link in the robot model.
                 tip_frame: link_ll_foot
                 # Reference frame of the task input (frame wrt which the input is expressed). This has to be the name of a valid link in robot model. If ref_frame != world the controller output will be transformed to the world frame.
@@ -92,11 +114,11 @@ whole_body_controller:
                 # Initial weights for this task. Size has to be same as number of joints
                 weights: [1.0,1.0,1.0,1.0,1.0,1.0]
                 # Initial activation for this task. Has to be within 0 and 1.
-                activation: 0.0
+                activation: 1.0
                 # Array of proportional gain values, size has to be same as number of joints
-                p_gain: [2.0,2.0,2.0,2.0,2.0,2.0]
+                p_gain: [1000.0,1000.0,1000.0,1000.0,1000.0,1000.0]
                 # Array of derivative gain values, size has to be same as number of joints
-                d_gain: [0.0,0.0,0.0,0.0,0.0,0.0]
+                d_gain: [200.0,200.0,200.0,200.0,200.0,200.0]
                 # Controller output saturation per element. Size has to be same as number of joints
                 max_control_output: [100000.0,100000.0,100000.0,100000.0,100000.0,100000.0]
 
