--- a/repos.yaml
+++ b/repos.yaml
@@ -2,7 +2,7 @@ repositories:
   robot_control_msgs:
     type: git
     url: https://github.com/dfki-ric-underactuated-lab/robot_control_msgs.git
-    version: master
+    version: main
   wbc_msgs:
     type: git
     url: https://github.com/arc-opt/wbc_msgs.git
